add header and footer

--- a/index.html
+++ b/index.html
@@ -1,11 +1,99 @@
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ваш Bo&Bo</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ваш Bo&Bo</title>
+
+    <link rel="stylesheet" href="./css/all.css" />
+    <link rel="stylesheet" href="./css/coolicons.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="header__nav">
+          <div class="header__col">
+            <a href="" class="header__link">O нас</a>
+          </div>
+          <div class="header__col">
+            <div class="header__theme">
+              <div class="header__logo">
+                <img
+                  src="./assets/img/logo-black.svg"
+                  class="header__logo-img"
+                  alt="Bo&Bo"
+                />
+              </div>
+              <div class="header__subtitle">
+                Bо&Bо индивидуальное решение для вашего пространства
+              </div>
+            </div>
+            <a href="" class="header__link">Каталог мебели</a>
+          </div>
+          <div class="header__col">
+            <a href="" class="header__link">Контакты</a>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <main></main>
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="footer__col">
+          <div class="footer__logo">
+            <img
+              class="footer__logo-img"
+              src="./assets/img/logo.svg"
+              alt="Bo&Bo"
+            />
+          </div>
+        </div>
+        <div class="footer__col">
+          <nav class="footer__nav">
+            <a href="" class="footer__link">Главная</a>
+            <a href="" class="footer__link">Каталог</a>
+            <a href="" class="footer__link">О нас</a>
+            <a href="" class="footer__link">Контакты</a>
+          </nav>
+        </div>
+        <div class="footer__col">
+          <nav class="footer__nav">
+            <a href="tel:+375293689388" class="footer__link">
+              <img src="./assets/icon/circle.svg" alt="&#9711" />
+              <span>+375 29 368 93 88</span>
+            </a>
+            <a href="tel:+375296204060" class="footer__link">
+              <img src="./assets/icon/circle.svg" alt="&#9711" />
+              <span>+375 29 620 40 60</span>
+            </a>
+            <a href="mailto:mail@mail.com" class="footer__link">
+              <img src="./assets/icon/circle.svg" alt="&#9711" />
+              <span>mail@mail.com</span>
+            </a>
+            <a class="footer__link">
+              <img src="./assets/icon/circle.svg" alt="&#9711" />
+              <img src="./assets/icon/circle.svg" alt="&#9711" />
+              <img src="./assets/icon/circle.svg" alt="&#9711" />
+              <img src="./assets/icon/circle.svg" alt="&#9711" />
+              <img src="./assets/icon/circle.svg" alt="&#9711" />
+              <img src="./assets/icon/circle.svg" alt="&#9711" />
+            </a>
+          </nav>
+        </div>
+        <div class="footer__col">
+          <form class="footer__form" action="" method="">
+            <div class="footer__form-title">Свяжитесь с нами</div>
+            <input class="footer__form-input" placeholder="+375 ( . . )  - ___ - __ - __">
+            <button class="btn" type="submit">Заказать звонок</button>
+          </form>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
