--- a/index.html
+++ b/index.html
@@ -42,7 +42,34 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="welcome">
+        <div class="container welcome__container">
+          <div class="welcome__present">
+            <div class="welcome-slider">
+              <div class="welcome-slider__item">
+                <img src="./assets/img/index/slider-1.png" alt="Table">
+              </div>
+              <div class="welcome-slider__item">
+                <img src="./assets/img/index/slider-2.png" alt="Table">
+              </div>
+              <div class="welcome-slider__item">
+                <img src="./assets/img/index/slider-3.png" alt="Table">
+              </div>
+            </div>
+          </div>
+          <div class="welcome__info">
+            <h1 class="welcome__title">
+              Ваш<br>
+              Bo&Bo
+            </h1>
+            <p class="welcome__subtitle">
+              Вы ещё узнаете каким стильным и удобным может быть ваше пространство
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer">
       <div class="container footer__container">
         <div class="footer__col">
@@ -95,5 +122,8 @@
         </div>
       </div>
     </footer>
+    <script src="js/jquery.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/slider.js"></script>
   </body>
 </html>
