--- a/index.html
+++ b/index.html
@@ -69,6 +69,111 @@
           </div>
         </div>
       </section>
+      <section class="individuality">
+        <h2>Индивидуальность</h2>
+        <div class="devider"></div>
+        <p>Мы заботимся о  желаниях наших клиентах, поэтому мы работает только с надежными поставщиками и качественным ДСП</p>
+        <a href="" class="btn">Наши партнёры</a>
+      </section>
+      <div class="gallery-line">
+        <div class="gallery-line__item">
+          <img class="gallery-line__item-img" src="./assets/img/gallery-line/gallery-item-1.jpg" alt="photo">
+          <div class="gallery-line__item-overlay">
+            <div class="gallery-line__item-title">Абсолютная надёжность</div>
+            <div class="devider"></div>
+            <div class="gallery-line__item-subtitle">Горки</div>
+          </div>
+        </div>
+        <div class="gallery-line__item">
+          <img class="gallery-line__item-img" src="./assets/img/gallery-line/gallery-item-2.jpg" alt="photo">
+          <div class="gallery-line__item-overlay">
+            <div class="gallery-line__item-title">Абсолютная надёжность</div>
+            <div class="devider"></div>
+            <div class="gallery-line__item-subtitle">Горки</div>
+          </div>
+        </div>
+        <div class="gallery-line__item">
+          <img class="gallery-line__item-img" src="./assets/img/gallery-line/gallery-item-3.jpg" alt="photo">
+          <div class="gallery-line__item-overlay">
+            <div class="gallery-line__item-title">Абсолютная надёжность</div>
+            <div class="devider"></div>
+            <div class="gallery-line__item-subtitle">Горки</div>
+          </div>
+        </div>
+        <div class="gallery-line__item">
+          <img class="gallery-line__item-img" src="./assets/img/gallery-line/gallery-item-4.jpg" alt="photo">
+          <div class="gallery-line__item-overlay">
+            <div class="gallery-line__item-title">Абсолютная надёжность</div>
+            <div class="devider"></div>
+            <div class="gallery-line__item-subtitle">Горки</div>
+          </div>
+        </div>
+        <div class="gallery-line__item">
+          <img class="gallery-line__item-img" src="./assets/img/gallery-line/gallery-item-5.jpg" alt="photo">
+          <div class="gallery-line__item-overlay">
+            <div class="gallery-line__item-title">Абсолютная надёжность</div>
+            <div class="devider"></div>
+            <div class="gallery-line__item-subtitle">Горки</div>
+          </div>
+        </div>
+      </div>
+      <section class="specific">
+        <div class="container">
+          <h1>Специфичность<br>
+            наш вариант</h1>
+          <div class="specific__list">
+            <div class="specific__item">
+              <img src="./assets/icon/circle.svg" alt="&#9711">
+              <span>Работаем по индивидуальному заказу</span>
+            </div>
+            <div class="specific__item">
+              <img src="./assets/icon/circle.svg" alt="&#9711">
+              <span>Наглядность производства</span>
+            </div>
+            <div class="specific__item">
+              <img src="./assets/icon/circle.svg" alt="&#9711">
+              <span>Гарантия качества</span>
+            </div>
+            <a href="./about.html" class="specific__item">
+              <span>Подробнее о нас</span>
+              <img src="./assets/icon/arrow-right.svg" alt="&#9711">
+            </a>
+          </div>
+        </div>
+      </section>
+      <section class="timeline">
+        <div class="container">
+          <h2>Как мы работаем</h2>
+          <div class="timeline__picture">
+            <img src="./assets/img/index/how-we-work.png" alt="Timline">
+          </div>
+        </div>
+      </section>
+      <section class="gallery">
+        <div class="gallery__categorys">
+          <div class="btn">Горки</div>
+          <div class="btn">Шкафы</div>
+          <div class="btn">Другая мебель</div>
+          <div class="btn">Кухни</div>
+          <div class="btn">Столы</div>    
+        </div>
+        <div class="gallery__list">
+          <div class="gallery__item big">
+            <img src="./assets/img/gallery/gallery-5.jpg" alt="gallery picture">
+          </div>
+          <div class="gallery__item item-1">
+            <img src="./assets/img/gallery/gallery-1.jpg" alt="gallery picture">
+          </div>
+          <div class="gallery__item item-2">
+            <img src="./assets/img/gallery/gallery-2.jpg" alt="gallery picture">
+          </div>
+          <div class="gallery__item item-3">
+            <img src="./assets/img/gallery/gallery-3.jpg" alt="gallery picture">
+          </div>
+          <div class="gallery__item item-4">
+            <img src="./assets/img/gallery/gallery-4.jpg" alt="gallery picture">
+          </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container footer__container">
