--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <nav class="header__nav">
           <div class="header__col">
-            <a href="" class="header__link">O нас</a>
+            <a href="./about.html" class="header__link">O нас</a>
           </div>
           <div class="header__col">
             <div class="header__theme">
@@ -34,10 +34,10 @@
                 Bо&Bо индивидуальное решение для вашего пространства
               </div>
             </div>
-            <a href="" class="header__link">Каталог мебели</a>
+            <a href="./gallery.html" class="header__link">Каталог мебели</a>
           </div>
           <div class="header__col">
-            <a href="" class="header__link">Контакты</a>
+            <a href="./contact.html" class="header__link">Контакты</a>
           </div>
         </nav>
       </div>
