--- a/index.html
+++ b/index.html
@@ -188,10 +188,11 @@
         </div>
         <div class="footer__col">
           <nav class="footer__nav">
-            <a href="" class="footer__link">Главная</a>
-            <a href="" class="footer__link">Каталог</a>
-            <a href="" class="footer__link">О нас</a>
-            <a href="" class="footer__link">Контакты</a>
+            <a href="./index.html" class="footer__link">Главная</a>
+            <a href="./gallery.html" class="footer__link">Каталог</a>
+            <a href="./about.html" class="footer__link">О нас</a>
+            <a href="./contact.html" class="footer__link">Контакты</a>
+            <a href="" class="footer__link">Наши партнеры</a>
           </nav>
         </div>
         <div class="footer__col">
