--- a/about.html
+++ b/about.html
@@ -43,7 +43,28 @@
       </div>
     </header>
     <main>
-      
+      <div class="breadcrumbs">
+        <h1>О нас!</h1>
+        <div class="breadcrumbs__container">
+          <div class="container">
+            <a href="./index.html" class="breadcrumbs__item">Главная</a>
+            <span>/</span>
+            <a href="./about.html" class="breadcrumbs__item">О нас</a>
+          </div>
+        </div>
+      </div>
+      <section class="container info">
+        <h2>Баланс форм и комфорта для ваших желаний</h2>
+        <div class="devider"></div>
+        <div class="info__block">
+          <p>
+            Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock chillwave literally post-ironic ramps subway tile kitsch. Shaman tumblr fixie echo park street art. Enamel pin vaporware wayfarers, organic succulents hella sustainable cardigan.
+          </p>
+          <p>
+            Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn tilde distillery pork belly single-origin coffee tumblr quinoa copper mug. Affogato cold-pressed unicorn, viral intelligentsia leggings raw denim kombucha tote bag messenger bag chambray vape coloring book scenester. Activated charcoal wayfarers church-key tote bag synth brunch. Retro cornhole
+          </p>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container footer__container">
