--- a/about.html
+++ b/about.html
@@ -65,6 +65,30 @@
           </p>
         </div>
       </section>
+      <div class="decoration decoration-about">
+        <div class="decoration__picture">
+          <img class="decoration__pcture-img" src="./assets/img/about/decor.png" alt="Picture">
+        </div>
+      </div>
+      <section class="our">
+        <div class="container">
+          <div class="our__container">
+            <div class="our__picture">
+              <img class="our__picture-img" src="./assets/img/about/our-picture.png" alt="Table">
+            </div>
+            <div class="our__info">
+              <div class="our__title">Наше вдохновение - это вы</div>
+              <div class="devider"></div>
+              <p class="our__text">
+                Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth helvetica jean shorts. Fanny pack church-key cornhole, banh mi thundercats gochujang keytar.
+              </p>
+              <div class="progressbar">
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container footer__container">
