--- a/about.html
+++ b/about.html
@@ -83,12 +83,81 @@
                 Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth helvetica jean shorts. Fanny pack church-key cornhole, banh mi thundercats gochujang keytar.
               </p>
               <div class="progressbar">
-
+                <div class="progressbar__item">
+                  <div class="progressbar__info">
+                    <div class="progressbar__name">Выполнение чертежа</div>
+                    <div class="progressbar__count">80%</div>
+                  </div>
+                  <div class="progressbar__line"></div>
+                </div>
+                <div class="progressbar__item">
+                  <div class="progressbar__info">
+                    <div class="progressbar__name">Выполнение чертежа</div>
+                    <div class="progressbar__count">80%</div>
+                  </div>
+                  <div class="progressbar__line"></div>
+                </div>
+                <div class="progressbar__item">
+                  <div class="progressbar__info">
+                    <div class="progressbar__name">Выполнение чертежа</div>
+                    <div class="progressbar__count">80%</div>
+                  </div>
+                  <div class="progressbar__line"></div>
+                </div>
+                <div class="progressbar__item">
+                  <div class="progressbar__info">
+                    <div class="progressbar__name">Выполнение чертежа</div>
+                    <div class="progressbar__count">80%</div>
+                  </div>
+                  <div class="progressbar__line"></div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <div class="gallery-line">
+        <div class="gallery-line__item">
+          <img class="gallery-line__item-img" src="./assets/img/gallery-line/gallery-item-1.jpg" alt="photo">
+          <div class="gallery-line__item-overlay">
+            <div class="gallery-line__item-title">Абсолютная надёжность</div>
+            <div class="devider"></div>
+            <div class="gallery-line__item-subtitle">Горки</div>
+          </div>
+        </div>
+        <div class="gallery-line__item">
+          <img class="gallery-line__item-img" src="./assets/img/gallery-line/gallery-item-2.jpg" alt="photo">
+          <div class="gallery-line__item-overlay">
+            <div class="gallery-line__item-title">Абсолютная надёжность</div>
+            <div class="devider"></div>
+            <div class="gallery-line__item-subtitle">Горки</div>
+          </div>
+        </div>
+        <div class="gallery-line__item">
+          <img class="gallery-line__item-img" src="./assets/img/gallery-line/gallery-item-3.jpg" alt="photo">
+          <div class="gallery-line__item-overlay">
+            <div class="gallery-line__item-title">Абсолютная надёжность</div>
+            <div class="devider"></div>
+            <div class="gallery-line__item-subtitle">Горки</div>
+          </div>
+        </div>
+        <div class="gallery-line__item">
+          <img class="gallery-line__item-img" src="./assets/img/gallery-line/gallery-item-4.jpg" alt="photo">
+          <div class="gallery-line__item-overlay">
+            <div class="gallery-line__item-title">Абсолютная надёжность</div>
+            <div class="devider"></div>
+            <div class="gallery-line__item-subtitle">Горки</div>
+          </div>
+        </div>
+        <div class="gallery-line__item">
+          <img class="gallery-line__item-img" src="./assets/img/gallery-line/gallery-item-5.jpg" alt="photo">
+          <div class="gallery-line__item-overlay">
+            <div class="gallery-line__item-title">Абсолютная надёжность</div>
+            <div class="devider"></div>
+            <div class="gallery-line__item-subtitle">Горки</div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="footer">
       <div class="container footer__container">
