--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -73,7 +74,7 @@
         <h2>Индивидуальность</h2>
         <div class="devider"></div>
         <p>Мы заботимся о  желаниях наших клиентах, поэтому мы работает только с надежными поставщиками и качественным ДСП</p>
-        <a href="" class="btn">Наши партнёры</a>
+        <a href="./sponsored.html" class="btn">Наши партнёры</a>
       </section>
       <div class="gallery-line">
         <div class="gallery-line__item">
@@ -192,7 +193,7 @@
             <a href="./gallery.html" class="footer__link">Каталог</a>
             <a href="./about.html" class="footer__link">О нас</a>
             <a href="./contact.html" class="footer__link">Контакты</a>
-            <a href="" class="footer__link">Наши партнеры</a>
+            <a href="./sponsored.html" class="footer__link">Наши партнеры</a>
           </nav>
         </div>
         <div class="footer__col">
@@ -222,14 +223,17 @@
         <div class="footer__col">
           <form class="footer__form" action="" method="">
             <div class="footer__form-title">Свяжитесь с нами</div>
-            <input class="footer__form-input" placeholder="+375 ( . . )  - ___ - __ - __">
-            <button class="btn" type="submit">Заказать звонок</button>
+            <input class="footer__form-input" id="phone" placeholder="+375(__)-___-__-__">
+            <div class="btn" id="phoneSubmit">Заказать звонок</div>
           </form>
         </div>
       </div>
     </footer>
-    <script src="js/jquery.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/slider.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/jquery.maskedinput.min.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/slider.js"></script>
+    <script src="./js/validation.js"></script>
+    <script src="./js/sweetalert.js"></script>
   </body>
 </html>
