--- a/about.html
+++ b/about.html
@@ -86,36 +86,45 @@
                 <div class="progressbar__item">
                   <div class="progressbar__info">
                     <div class="progressbar__name">Выполнение чертежа</div>
-                    <div class="progressbar__count">80%</div>
+                    <div class="progressbar__count"><span data-barcount="1">0</span>%</div>
                   </div>
-                  <div class="progressbar__line"></div>
+                  <div class="progressbar__line">
+                    <div class="progressbar__line-bar" data-barline="1"></div>
+                  </div>
                 </div>
                 <div class="progressbar__item">
                   <div class="progressbar__info">
-                    <div class="progressbar__name">Выполнение чертежа</div>
-                    <div class="progressbar__count">80%</div>
+                    <div class="progressbar__name">Замер</div>
+                    <div class="progressbar__count"><span data-barcount="2">0</span>%</div>
                   </div>
-                  <div class="progressbar__line"></div>
+                  <div class="progressbar__line">
+                      <div class="progressbar__line-bar" data-barline="2"></div>
+                  </div>
                 </div>
                 <div class="progressbar__item">
                   <div class="progressbar__info">
-                    <div class="progressbar__name">Выполнение чертежа</div>
-                    <div class="progressbar__count">80%</div>
+                    <div class="progressbar__name">Функциональный анализ и визуализация</div>
+                    <div class="progressbar__count"><span data-barcount="3">0</span>%</div>
                   </div>
-                  <div class="progressbar__line"></div>
+                  <div class="progressbar__line">
+                      <div class="progressbar__line-bar" data-barline="3"></div>
+                  </div>
                 </div>
                 <div class="progressbar__item">
                   <div class="progressbar__info">
-                    <div class="progressbar__name">Выполнение чертежа</div>
-                    <div class="progressbar__count">80%</div>
+                    <div class="progressbar__name">Производство</div>
+                    <div class="progressbar__count"><span data-barcount="4">0</span>%</div>
                   </div>
-                  <div class="progressbar__line"></div>
+                  <div class="progressbar__line">
+                      <div class="progressbar__line-bar" data-barline="4"></div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <div class="our-gap"></div>
       <div class="gallery-line">
         <div class="gallery-line__item">
           <img class="gallery-line__item-img" src="./assets/img/gallery-line/gallery-item-1.jpg" alt="photo">
@@ -172,10 +181,11 @@
         </div>
         <div class="footer__col">
           <nav class="footer__nav">
-            <a href="" class="footer__link">Главная</a>
-            <a href="" class="footer__link">Каталог</a>
-            <a href="" class="footer__link">О нас</a>
-            <a href="" class="footer__link">Контакты</a>
+            <a href="./index.html" class="footer__link">Главная</a>
+            <a href="./gallery.html" class="footer__link">Каталог</a>
+            <a href="./about.html" class="footer__link">О нас</a>
+            <a href="./contact.html" class="footer__link">Контакты</a>
+            <a href="./sponsored.html" class="footer__link">Наши партнеры</a>
           </nav>
         </div>
         <div class="footer__col">
@@ -205,14 +215,18 @@
         <div class="footer__col">
           <form class="footer__form" action="" method="">
             <div class="footer__form-title">Свяжитесь с нами</div>
-            <input class="footer__form-input" placeholder="+375 ( . . )  - ___ - __ - __">
-            <button class="btn" type="submit">Заказать звонок</button>
+            <input class="footer__form-input" id="phone" placeholder="+375(__)-___-__-__">
+            <div class="btn disabled" id="phoneSubmit">Заказать звонок</div>
           </form>
         </div>
       </div>
     </footer>
-    <script src="js/jquery.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/slider.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/jquery.maskedinput.min.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/slider.js"></script>
+    <script src="./js/validation.js"></script>
+    <script src="./js/sweetalert.js"></script>
+    <script src="./js/progressbar.js"></script>
   </body>
 </html>
